# firefox_bookmark_to_sqlite3

./: .gitignore  Cargo.toml  README.md  test.sh  test_samples.sh
.github/workflows/: rust-ci.yml
samples/: bookmarks.json  input.json  test.sqlite3  test_insert_manga.db  v1.csv  漫画.sqlite3
src/: lib.rs  main.rs  model_csv_manga.rs  model_json.rs  model_json_mozilla_bookmarks.rs  model_manga.rs  model_sqlite3_manga.rs  text_type.rs
tests/: bookmarks.json  input.json  input.prettified.json  v1.csv  v2.csv  漫画.sqlite3
