[package]
name = "firefox_bookmark_to_csv"
version = "0.1.0"
edition = "2021"

[dependencies]
kakasi = "0.1.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"

# `bundled` causes us to automatically compile and link in an up to date
# version of SQLite for you. This avoids many common build issues, and
# avoids depending on the version of SQLite on the users system (or your
# system), which may be old or missing. It's the right choice for most
# programs that control their own SQLite databases.
#
# That said, it's not ideal for all scenarios and in particular, generic
# libraries built around `rusqlite` should probably not enable it, which
# is why it is not a default feature -- it could become hard to disable.
rusqlite = { version = "0.29.0", features = ["bundled"] }
url = "2.4.1"

chrono = "0.4.26"
csv = "1.2.2"
crc = "3.0.1"
